[package]
name = "rust_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#godot = { path = "deps/gdextension/godot" }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
dungeon_stranding = { path = "deps/dungeon_stranding" }
owning_ref = "*"
num-derive = "*"
num-traits = "*"
smallvec = "*"
paste = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "*", features = ["console"] }
